--- a/WebMessagingApp/wwwroot/home2.html
+++ b/WebMessagingApp/wwwroot/home2.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ana Sayfa</title>
+  <title>Main Page</title>
   <style>
-    :root{
-      --glass: rgba(0,0,0,.55);
-      --radius: 16px;
-    }
+    :root{ --glass: rgba(0,0,0,.55); --radius:16px; }
     html, body { height:100%; margin:0; }
     body{
       min-height:100%;
@@ -16,7 +13,6 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:#fff;
     }
-    /* Sayfayı ortala ve genişliği sınırlı tut */
     .page{
       max-width: 1100px;
       width: min(95%, 1100px);
@@ -31,125 +27,92 @@
       border-radius: var(--radius);
       box-shadow: 0 10px 30px rgba(0,0,0,.35);
     }
-
-    /* Sol küçük kutu: kullanıcı listesi */
-    .sidebar{
-      padding: 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
-    .sidebar h2{
-      margin: 0 0 8px;
-      font-size: 18px;
-      opacity: .95;
-    }
-    .user-list{
-      list-style: none;
-      margin: 0; padding: 0;
-      display: grid; gap: 8px;
-    }
-    .user{
-      padding: 10px 12px;
-      border-radius: 10px;
-      background: rgba(255,255,255,.08);
-      border: 1px solid rgba(255,255,255,.18);
-      display: flex; align-items: center; gap: 10px;
-    }
-    .user .dot{
-      width: 10px; height: 10px; border-radius: 50%; background: #22c55e;
-      box-shadow: 0 0 0 3px rgba(34,197,94,.25);
-    }
-    .user .name{ opacity: .95; }
-
-    /* Ortadaki büyük mesajlaşma kutusu */
-    .chat{
-      display: flex;
-      flex-direction: column;
-      min-height: 70vh;           /* yüksekliği büyük tut */
-      padding: 0;
-    }
-    .chat-header{
-      padding: 16px 18px;
-      border-bottom: 1px solid rgba(255,255,255,.15);
-      display: flex; align-items: center; justify-content: space-between;
-    }
-    .chat-header .hello{
-      font-size: 18px; opacity:.95;
-    }
-    .messages{
-      flex: 1;
-      overflow: auto;
-      padding: 18px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .msg{
-      max-width: 70%;
-      padding: 10px 12px;
-      border-radius: 12px;
-      background: rgba(255,255,255,.10);
-      border: 1px solid rgba(255,255,255,.15);
-    }
-    .msg.me{
-      align-self: flex-end;
-      background: rgba(59,130,246,.25);
-      border-color: rgba(59,130,246,.45);
-    }
-    .chat-input{
-      border-top: 1px solid rgba(255,255,255,.15);
-      padding: 12px;
-      display: flex; gap: 10px;
-    }
-    .chat-input input[type="text"]{
-      flex:1; min-width: 0;
-      padding: 12px; border-radius: 12px; border: 1px solid rgba(255,255,255,.25);
-      background: rgba(255,255,255,.08); color:#fff; outline:none;
-    }
-    .chat-input button{
-      padding: 12px 16px; border-radius: 12px; border: 0;
-      background:#3b82f6; color:#fff; font-weight:600; cursor:pointer;
-    }
-    .chat-input button:hover{ filter: brightness(1.1); }
-
-    /* Küçük ekranlar için: üstte listeler, altta chat */
-    @media (max-width: 720px){
-      .page{ grid-template-columns: 1fr; }
-      .sidebar{ order: 1; }
-      .chat{ order: 2; }
-    }
+    .sidebar{ padding:16px; display:flex; flex-direction:column; gap:12px; }
+    .sidebar h2{ margin:0 0 8px; font-size:18px; opacity:.95; }
+    .user-list{ list-style:none; margin:0; padding:0; display:grid; gap:8px; }
+    .user{ padding:10px 12px; border-radius:10px; background:rgba(255,255,255,.08); border:1px solid rgba(255,255,255,.18); display:flex; align-items:center; gap:10px; }
+    .user .dot{ width:10px; height:10px; border-radius:50%; background:#22c55e; box-shadow:0 0 0 3px rgba(34,197,94,.25); }
+    .chat{ display:flex; flex-direction:column; min-height:70vh; }
+    .chat-header{ padding:16px 18px; border-bottom:1px solid rgba(255,255,255,.15); display:flex; align-items:center; justify-content:space-between; }
+    .chat-header .hello{ font-size:18px; opacity:.95; }
+    .messages{ flex:1; overflow:auto; padding:18px; display:flex; flex-direction:column; gap:10px; }
+    .msg{ max-width:70%; padding:10px 12px; border-radius:12px; background:rgba(255,255,255,.10); border:1px solid rgba(255,255,255,.15); }
+    .msg.me{ align-self:flex-end; background:rgba(59,130,246,.25); border-color:rgba(59,130,246,.45); }
+    .meta{ font-size:12px; opacity:.8; margin-bottom:4px; }
+    .chat-input{ border-top:1px solid rgba(255,255,255,.15); padding:12px; display:flex; gap:10px; }
+    .chat-input input[type="text"]{ flex:1; min-width:0; padding:12px; border-radius:12px; border:1px solid rgba(255,255,255,.25); background:rgba(255,255,255,.08); color:#fff; outline:none; }
+    .chat-input button{ padding:12px 16px; border-radius:12px; border:0; background:#3b82f6; color:#fff; font-weight:600; cursor:pointer; }
+    .chat-input button:hover{ filter:brightness(1.1); }
+    @media (max-width: 720px){ .page{ grid-template-columns:1fr; } }
   </style>
 </head>
 <body>
   <main class="page">
-    <!-- SOL: diğer kullanıcılar için küçük kutu -->
+
     <aside class="sidebar card">
       <h2>Users</h2>
-      <ul class="user-list">
-        <!-- Şimdilik örnek; gerçek listeyi sonra dolduracağız -->
+      <ul class="user-list" id="userList">
         <li class="user"><span class="dot"></span><span class="name">Alice</span></li>
         <li class="user"><span class="dot"></span><span class="name">Bob</span></li>
         <li class="user"><span class="dot"></span><span class="name">Charlie</span></li>
       </ul>
     </aside>
 
-    <!-- SAĞ/ORTA: büyük mesajlaşma alanı -->
+
     <section class="chat card">
       <div class="chat-header">
         <div class="hello">Welcome, {{username}}</div>
-        <!-- buraya ileride oda adı / aktif kullanıcı sayısı vb. koyabiliriz -->
       </div>
-      <div class="messages" id="messages">
-        <!-- Şimdilik statik örnek içerik -->
-        <div class="msg">Welcome to the chat! This is a placeholder.</div>
-        <div class="msg me">Thanks! Looks great.</div>
-      </div>
-      <form class="chat-input" action="#" method="post">
-        <input type="text" name="text" placeholder="Type a message..." autocomplete="off">
+
+      <div class="messages" id="messages"></div>
+
+      <form class="chat-input" id="chatForm" autocomplete="off">
+        <input type="text" id="text" name="text" placeholder="Type a message..." required>
         <button type="submit">Send</button>
       </form>
     </section>
   </main>
+
+  <script>
+    const username = "{{username}}";
+    const msgs = document.getElementById('messages');
+    const form = document.getElementById('chatForm');
+    const input = document.getElementById('text');
+
+
+      function appendMessage(user, text) {
+      const wrap = document.createElement('div');
+      wrap.className = 'msg' + (user === username ? ' me' : '');
+      const meta = document.createElement('div');
+      meta.className = 'meta';
+      meta.textContent = user;
+      const body = document.createElement('div');
+      body.textContent = text;
+      wrap.appendChild(meta); wrap.appendChild(body);
+      msgs.appendChild(wrap);
+      msgs.scrollTop = msgs.scrollHeight;
+    }
+
+    const es = new EventSource('/events');
+    es.addEventListener('msg', (ev) => {
+      try {
+        const m = JSON.parse(ev.data);
+        appendMessage(m.user, m.text);
+      } catch {}
+    });
+
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const text = input.value.trim();
+      if(!text) return;
+      fetch('/send', {
+        method: 'POST',
+        headers: {'Content-Type':'application/x-www-form-urlencoded'},
+        body: 'user=' + encodeURIComponent(username) + '&text=' + encodeURIComponent(text)
+      });
+      input.value = ''; input.focus();
+
+    });
+  </script>
 </body>
 </html>
